--- a/index.html
+++ b/index.html
@@ -138,15 +138,17 @@ Solicitar Cotação Agora
 </div>
 
 <section>
-<h2 class="titulo">Nossos Serviços</h2>
-<img src="imagens/antes1.jpg" width="300">
-<img src="imagens/antes2.jpg" width="400">
-<div class="cards">
-<div class="card">Compra de ouro bruto</div>
-<div class="card">Avaliação na hora</div>
-<div class="card">Parcerias com garimpeiros</div>
-<div class="card">Operação com balsa de mergulho</div>
-</div>
+  <h2 class="titulo">Nossos Serviços</h2>
+
+  <img src="imagens/antes1.jpg" width="300">
+  <img src="imagens/antes2.jpg" width="400">
+
+  <div class="cartas">
+    <div class="cartao">Compra de ouro bruto</div>
+    <div class="cartao">Avaliação na hora</div>
+    <div class="cartao">Parcerias com garimpeiros</div>
+    <div class="cartao">Operação com balsa de mergulho</div>
+  </div>
 </section>
 
 <section>
@@ -194,4 +196,5 @@ WhatsApp
 </a>
 
 </body>
+
 </html>
